20020119 Term::Clui 1.10 old enter, choose, edit, confirm rolled into one
20020121 1.11 added README, &ask takes default and bugs fixed
20020130 1.12 &choose handles big lists with &narrow_the_search
20020519 1.13 add FileSelect.pm and "man Term::Clui" works (ie with ::)
20020601 1.14 fixed 'require Clui.raw' bug in test_script
20020622 1.15 new Install script, and old MakeMaker-compatible Makefile.PL
20020626 1.16 Install gets default dirs right, &tiview simpler if <3 lines
20020911 1.17 &choose default dbm is now in ~/.clui_dir & obeys $CLUI_DIR
20020912 1.17 &choose default dbm handles collisions
20021008 add &inform; &timestamp export-ok'd
20030701 1.18 FreeBSD bug corrected ($^O now gives freebsd)
20030912 debug warn statements removed from FileSelect.pm
20031103 1.19 bug fixed handling DOWN in &choose
20031214 select used in &getch to return ESC promptly
20040520 1.20 minor doc fix for FileSelect, contact.html not email address
20040708 FileSelect -FPat bug fixed, and another minor doc fix
20040708 1.21 examples/test_script defaults to installed Clui.pm
20040709 &choose does multiple choice if called in array context
20040711 get_default and set_default handle arrays with $; but not used yet
20040714 1.22 remove timeout for returning ESC (it fails on Fedora xterm)
20040720 1.23 @marked gets correctly reset at each invocation of &choose
20040801 1.24 &edit checks in initial RCS version correctly
20040809 1.25 'tput lines' tried before 'tput rows' for all OSs
20041016 1.26 Install offers default locations as default to first-time users
20041021 1.27 &choose handles multi-line question text
20041107 1.28 EXPORT_OK routines documented and ALL tag defined
20041208 1.29 ^C at the "give me a clue" prompt works like "q to quit"
20050121 1.30 test.pl uses Test::Simple