@@ -8,3 +8,4 @@ MANIFEST
 README
 examples/login_shell
 examples/test_script
+examples/linux_admin
